feat: Added collection description on biblio detail response
